name:           simulation-task
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         ncrashed

executable simulation-task
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   aivika >=1.1,
                   aivika-experiment >=1.1 ,
                   aivika-experiment-chart >=1.2,
                   mtl >=2.1.2 && <2.2,
                   random >=1.0.1 && <1.1
  ghc-options:     -Wall

